# linguagerman

./: .gitignore  fix.py  fix2.py  german-ai-chat-spec-v2.md  implementation_plan.md  old_page.tsx.txt  project_structure.md  trochuyenai.md
backend/: implementation.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
backend/nginx/: api5.vanquyenhair.name.vn.conf
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: check-db.ts  copy_thumbnails.js  deploy.sh  nginx.conf  setup.sh
backend/src/: app.module.ts  main.ts
backend/src/admin/: admin.controller.ts  admin.service.ts
backend/src/ai/: ai.controller.ts  ai.gateway.ts  ai.module.ts  ai.service.ts  personas.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts  roles.guard.ts
backend/src/courses/: courses.controller.ts  courses.service.ts
backend/src/exams/: exams.controller.ts  exams.module.ts  exams.service.ts
backend/src/flashcards/: flashcards.controller.ts  flashcards.module.ts  flashcards.service.ts
backend/src/lessons/: lessons.controller.ts  lessons.module.ts  lessons.service.ts
backend/src/orders/: orders.controller.ts  orders.service.ts
backend/src/progress/: progress.controller.ts  progress.module.ts  progress.service.ts
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/lib/: api.ts  store.ts
frontend/nginx/: jlearn.vanquyenhair.name.vn.conf
llm-server/: README.md  deploy.sh  main.py  pyproject.toml  start.sh
(+91 files in other folders)
