[project]
name = "llm-server"
version = "0.2.0"
description = "LinguaGerman LLM Server - Qwen2.5-7B-Instruct on GPU"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "llama-cpp-python>=0.3.20",
    "huggingface-hub>=0.25.0",
    "pydantic>=2.9.0",
]
